envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9000
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                proxy_status_config: {}
                local_reply_config:
                  mappers:
                    - filter:
                        response_flag_filter:
                          flags:
                            - UH
                            - UF
                      headers_to_add:
                        - header:
                            key: "x-wso2-response-fault-flag"
                            value: "%RESPONSE_FLAGS%"
                  body_format:
                    json_format:
                      status: "%RESPONSE_CODE%"
                      message: "%LOCAL_REPLY_BODY%"
                      response_flag: "%RESPONSE_FLAGS%"
                      response_flag_details: "%RESPONSE_FLAGS_LONG%"
                access_log:
                  - name: file-logger-access-logs-http-connection-manager
                    typed_config:
                      # File Access Log Sink
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        text_format_source:
                          inline_string: >
                            [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %REQ(:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %BYTES_RECEIVED% %BYTES_SENT% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST% %DURATION% %REQUEST_DURATION% %REQUEST_TX_DURATION% %RESPONSE_DURATION% %RESPONSE_TX_DURATION%"
                        formatters:
                          - name: envoy.formatter.req_without_query
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: any-domain
                      domains:
                        - "*"
                      routes:
                        - name: my_upstream_service_route
                          metadata:
                            filter_metadata:
                              envoy.filters.http.ext_proc:
                                my-route-meta: foo
                          match:
                            safe_regex:
                              regex: "^/pets/([^/]+)/history"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          route:
                            append_x_forwarded_host: true
                            cluster: upstream-service
                        - name: call_api_openai_com_with_ext_proc
                          metadata:
                            filter_metadata:
                              envoy.filters.http.ext_proc:
                                my-route-meta: foo
                          match:
                            safe_regex:
                              regex: "^/openai/v1/with-ext-proc"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          route:
                            cluster: api_openai_com
                            timeout: 15s
                            host_rewrite_literal: api.openai.com
                            regex_rewrite:
                              pattern:
                                regex: "^/openai/v1/with-ext-proc(.*)"
                              substitution: "/v1\\1"
                          typed_per_filter_config:
                            # envoy.filters.http.ext_proc:
                            #   "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                            #   # overrides:
                            #   #   grpc_initial_metadata:
                            #   #     - key: "x-wso2-route-name"
                            #   #       value: "post_/pets/{petId}/history"
                            #   disabled: true
                        - name: call_api_openai_com_no_ext_proc
                          match:
                            prefix: /openai/v1/no-ext-proc
                          route:
                            cluster: api_openai_com
                            timeout: 15s
                            host_rewrite_literal: api.openai.com
                            regex_rewrite:
                              pattern:
                                regex: "^/openai/v1/no-ext-proc(.*)"
                              substitution: "/v1\\1"
                          # typed_per_filter_config:
                          #   envoy.filters.http.ext_proc:
                          #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                          #     disabled: true
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-processor-grpc-service
                        timeout: 0.250s
                      failure_mode_allow: false
                      metadata_options:
                        forwarding_namespaces:
                          typed:
                            - "envoy.filters.http.ext_proc"
                          untyped:
                            - "envoy.filters.http.ext_proc"
                        receiving_namespaces:
                          typed:
                            - "envoy.filters.http.ext_proc"
                          untyped:
                            - "envoy.filters.http.ext_proc"
                      route_cache_action: RETAIN
                      mutation_rules:
                        allow_all_routing: true
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_trailer_mode: SEND
                        response_trailer_mode: SEND
                        # https://www.envoyproxy.io/docs/envoy/v1.33.0/api-v3/extensions/filters/http/ext_proc/v3/processing_mode.proto#envoy-v3-api-enum-extensions-filters-http-ext-proc-v3-processingmode-bodysendmode
                        request_body_mode: FULL_DUPLEX_STREAMED
                        response_body_mode: FULL_DUPLEX_STREAMED
                      message_timeout:
                        seconds: 600
                        nanos: 250000000 # 250ms
                  - name: lua_filter_with_custom_name_1
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                http_protocol_options: {}

  clusters:
    - name: upstream-service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: request_info
                      port_value: 8080
    - name: api_openai_com
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_openai_com
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api.openai.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: api.openai.com
    - name: ext-processor-grpc-service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext-processor-grpc-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: host.docker.internal
                  port_value: 9001
